--- a/1Behaviour_Demo/1Behaviour_Demo.csproj
+++ b/1Behaviour_Demo/1Behaviour_Demo.csproj
@@ -36,6 +36,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Actor.cs" />
+    <Compile Include="Behavior.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
